Lista de usuários web

--- a/ZapWeb/Views/Home/Conversacao.cshtml
+++ b/ZapWeb/Views/Home/Conversacao.cshtml
@@ -21,25 +21,13 @@
 <body>
 
     <!-- Side navigation -->
-    <div class="sidenav">
+    <div class="sidenav" id="tela-conversacao">
         <div class="container-logo">
             <img src="~/Imagem/logo.png" style="width: 50%;" />
+            <a href="#" id="btnSair">Sair</a>
         </div>
         <div id="users">
-            <div class="container-user-item">
-                <img src="~/Imagem/logo.png" style="width: 20%;" />
-                <div>
-                    <span>Aline (online)</span>
-                    <span class="email">aline123@gmail.com</span>
-                </div>
-            </div>
-            <div class="container-user-item">
-                <img src="~/Imagem/logo.png" style="width: 20%;" />
-                <div>
-                    <span>Aline (offline)</span>
-                    <span class="email">aline123@gmail.com</span>
-                </div>
-            </div>
+
         </div>
 
     </div>
