--- a/ZapWeb/wwwroot/css/site.css
+++ b/ZapWeb/wwwroot/css/site.css
@@ -37,10 +37,12 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
-    padding: 35px 35px 0px 35px;
+    margin: 35px 35px 0px 35px;
     align-items: center;
 }
-
+    .container-user-item:hover{
+        cursor:pointer;
+    }
     .container-user-item span {
         margin-left: 20px;
         font-size: 10px;
