Tela de conversação, enviar mensagem.

--- a/ZapWeb/Views/Home/Conversacao.cshtml
+++ b/ZapWeb/Views/Home/Conversacao.cshtml
@@ -59,8 +59,8 @@
         </div>
 
         <div class="container-button">
-            <input type="text" placeholder="Mensagem" />
-            <button class="btn-send"></button>
+            <input type="text" placeholder="Mensagem" id="mensagem"/>
+            <button class="btn-send" id="btnEnviar"></button>
         </div>
 
     </div>
